# Ikarus

./: .gitignore  Ikarus.cabal  README.md  stack.yaml
app/: .Main.hs.swp  Main.hs
src/: Bodies.hs  Rendering.hs  Types.hs
