name:                Ikarus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gabriel168/Ikarus
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Rendering
                     , Bodies        
  build-depends:       base >= 4.7 && < 5
                     , linear 
                     , lens
                     , SDL
                     , SDL-image == 0.6.*
                     , SDL-gfx
 default-language:    Haskell2010

executable Ikarus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , Ikarus
                    , SDL
                    , SDL-image == 0.6.*
                    , SDL-gfx
                    , netwire
                    , containers
                    , linear
                    , lens 
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Ikarus
